--- a/main.css
+++ b/main.css
@@ -48,6 +48,7 @@ input[type = "search"]{
 .top-nav{
   display: flex;
   align-items: stretch;
+
 }
 .top-nav a{
   display: flex;
@@ -401,4 +402,28 @@ button.other{
   .top-nav{
     font-size: 2vmax;
   }
+}
+
+.active{
+  fill: #0050B3 !important;
+}
+
+.like, .share{
+  display: flex;
+  justify-content: flex-start;
+  color: #595959;
+  align-content: center;
+  flex-basis: 50%;
+  padding: 10px;
+}
+
+.share{
+  justify-content: flex-end;
+}
+
+ .share span{
+  margin-left: 20px;
+}
+.like span{
+  margin-left: 20px;
 }
